<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_filter_by"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <RadioGroup
        android:id="@+id/radio_group_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_overdue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:text="@string/overdue_option"
            android:checked="true" />
        <RadioButton
            android:id="@+id/radio_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:text="@string/today_option" />
        <RadioButton
            android:id="@+id/radio_tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:text="@string/upcoming_option" />
        <RadioButton
            android:id="@+id/radio_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_priority_option"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:buttonTint="@color/highPriority"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/diaglog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginRight="5dp"
            android:text="@string/str_cancel" />
        <Button
            android:id="@+id/diaglog_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:text="@string/str_filter" />
    </LinearLayout>

</LinearLayout>