<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rishi.codepath.taskkeeper.activities.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_detail_label"
        android:id="@+id/text_task_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_task"
        android:layout_below="@+id/text_task_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/text_task_label"
        android:layout_alignEnd="@+id/text_task_label"
        android:hint="@string/task_detail_hint"/>

    <TextView android:id="@+id/text_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_below="@id/edit_task"
        android:textColor="@color/text_color"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_due_date_value"
        android:layout_below="@id/text_due_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:text="@string/date_format_hint"/>
    <Button android:id="@+id/button_date_select"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/btn_date_select"
        android:layout_below="@id/text_due_date"
        android:layout_alignParentRight="true"
        android:layout_marginRight="190dp"/>
    <TextView android:id="@+id/text_task_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task notes"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:layout_below="@id/text_due_date_value"
        android:layout_marginTop="@dimen/view_margin"/>
    <EditText android:id="@+id/edit_task_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_task_notes"
        android:hint="@string/task_notes_hint"/>
    <RadioGroup android:id="@+id/radio_group_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_task_notes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/view_margin"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_label"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:buttonTint="@color/highPriority"/>
        <RadioButton android:id="@+id/radio_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_label"
            android:checked="true"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:buttonTint="@color/mediumPriority"/>
        <RadioButton android:id="@+id/radio_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_label"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:buttonTint="@color/lowPriority"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_priority"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
        <Button android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_cancel"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>
        <Button android:id="@+id/btnSaveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/save_label"/>
    </LinearLayout>
</RelativeLayout>
